--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 <body>
   <div class="topbar">
     <div class="brand">
-      <img src="./assets/logo-pp-original.png" alt="PP Group" />
+      <img src="/assets/logo-pp-original.png" alt="PP Group" />
     </div>
     <div class="actions">
       <button id="btnLogout">Sair</button>
