--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="login-screen">
     <div class="login-center">
-      <img src="./assets/logo-pp-original.png" alt="PP Group" class="login-logo" />
+     <img src="/assets/logo-pp-original.png" alt="PP Group" class="login-logo" />
       <div class="login-card">
         <h2>Dados de acesso</h2>
         <label for="email">Email</label>
