--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PP Group — Dashboard Cliente</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <div class="topbar">
@@ -53,15 +53,12 @@
     const token = localStorage.getItem('ppgroup_token');
     const user = JSON.parse(localStorage.getItem('ppgroup_user') || 'null');
     const API_BASE = (window.PP_API_BASE) ? window.PP_API_BASE : ((location.origin.includes('localhost') ? 'http://localhost:3000' : location.origin) + '/api');
-
-    if(!token || !user){ location.href = './index.html'; }
-
+    if(!token || !user){ location.href = '/index.html'; }
     document.getElementById('btnLogout').addEventListener('click', ()=>{
       localStorage.removeItem('ppgroup_token');
       localStorage.removeItem('ppgroup_user');
-      location.href = './index.html';
+      location.href = '/index.html';
     });
-
     const tabs = document.querySelectorAll('.tabs button');
     const panes = { ag: document.getElementById('tab-ag'), or: document.getElementById('tab-or'), ck: document.getElementById('tab-ck') };
     function setActiveTab(key){
@@ -71,14 +68,12 @@
     }
     tabs.forEach(b => b.addEventListener('click', ()=> setActiveTab(b.dataset.tab)));
     tabs[0].classList.add('active');
-
     function showLoading(targetId, text){
       const el = document.getElementById(targetId);
       el.innerHTML = `<div class="muted"><span class="spinner"></span>${text||'A carregar...'}</div>`;
     }
     function estadoChip(v){ if(!v) return ''; return `<span class="pill">${v}</span>`; }
     function formatDate(d,h){ try{ return new Intl.DateTimeFormat('pt-PT',{dateStyle:'medium'}).format(new Date(d)) + (h?` • ${h}`:''); }catch{return `${d||'-'} ${h||''}`;} }
-
     async function loadAg(){
       showLoading('list_ag','A carregar agendamentos...');
       const res = await fetch(API_BASE + '/appointments', { headers: { 'Authorization': 'Bearer ' + token } });
